Fixed mobile overflow

--- a/style.css
+++ b/style.css
@@ -1,4 +1,10 @@
 body {
+	margin: 0;
+	overflow: hidden;
+	font-size: 40px;
+}
+
+main {
 	background-color: #222;
 	color: white;
 	height: 60vh;
@@ -10,7 +16,6 @@ body {
 	align-items: center;
 	flex-direction: column;
 	font-family: 'Prompt', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-	font-size: 40px;
 	text-align: center;
 }
 
